--- a/src/question.html
+++ b/src/question.html
@@ -46,8 +46,12 @@
             <a href="#" class="close-menu_quiz"><svg class="icon"><use xlink:href="./images/sprite.svg#close"></use></svg></a>
             <b class="quiz_title-menu">Створення квізу</b>
             <ul class="menu_quiz-list">
-                <li><a href="./edit-quiz.html"><b>1</b><span>Стартова сторінка і опис</span></a></li>
-                <li><a href="#" class="active"><b>2</b><span>Запитання</span></a></li>
+                <li><a href="#"><b>1</b><span>Стартова сторінка і опис</span></a></li>
+                <li><a href="./question.html" class="active"><b>2</b><span>Запитання</span></a></li>
+                <li><a href="#"><b>3</b><span>Форма контактів</span></a></li>
+                <li><a href="#"><b>4</b><span>Редагувати</span></a></li>
+                <li><a href="#"><b>5</b><span>Встановлення квізу</span></a></li>
+                <li><a href="#"><b>6</b><span>Запуск реклами</span></a></li>
             </ul>
         </aside>
         <div class="quiz_content">
