--- a/src/map.html
+++ b/src/map.html
@@ -67,18 +67,20 @@
 </header>
 <main>
     <ul class="map_main">
-        <li><b>Front part</b></li>
-        <li><a href="./main-page.html">main page</a></li>
-        <li><a href="./quiz-grid.html">quiz grid</a></li>
-        <li><a href="./start-page.html">start page 1</a></li>
-        <li><a href="./start-page-2.html">start page 2</a></li>
-        <li><a href="./result.html">result</a></li>
-        <li><b>Back-office part</b></li>
         <li><a href="./login.html">login</a></li>
         <li><a href="./cabinet.html">cabinet</a></li>
-        <li><a href="./index.html">quiz list</a></li>
+        <li><a href="./question.html">question</a></li>
         <li><a href="./edit-quiz.html">edit quiz</a></li>
+        <li><a href="./edit-form.html">edit form</a></li>
+        <li><a href="./form.html">form</a></li>
+        <li><a href="./index.html">index</a></li>
+        <li><a href="./main-page.html">main page</a></li>
+        <li><a href="./map.html">map</a></li>
         <li><a href="./publication.html">publication</a></li>
+        <li><a href="./quiz-grid.html">quiz grid</a></li>
+        <li><a href="./result.html">result</a></li>
+        <li><a href="./start-page.html">start page</a></li>
+        <li><a href="./start-page-2.html">start page 2</a></li>
     </ul>
 
     <div class="shadow hidden">close</div>
