--- a/src/edit-form.html
+++ b/src/edit-form.html
@@ -49,7 +49,7 @@
                 <li><a href="#"><b>1</b><span>Стартова сторінка і опис</span></a></li>
                 <li><a href="./question.html"><b>2</b><span>Запитання</span></a></li>
                 <li><a href="#" class="active"><b>3</b><span>Форма контактів</span></a></li>
-                <li><a href="#"><b>4</b><span>Редагувати</span></a></li>
+                <li><a href="#"><b>4</b><span>Результати</span></a></li>
                 <li><a href="#"><b>5</b><span>Встановлення квізу</span></a></li>
                 <li><a href="#"><b>6</b><span>Запуск реклами</span></a></li>
             </ul>
@@ -65,43 +65,63 @@
             <div class="edit_form">
                 <div class="text_box">
                     <b class="small_title">Імя</b>
-                    <label class="allow_input-box">
-                        <input type="checkbox">
-                        <span>Показувати імя</span>
-                    </label>
-                    <input type="text" class="allow_input" disabled>
+                    <div class="form_row">
+                        <label class="allow_input-box">
+                            <input type="checkbox">
+                            <span></span>
+                        </label>
+                        <div class="form_row-inner">
+                            <input type="text" class="allow_input" disabled>
+                        </div>
+                    </div>
                 </div>
                 <div class="text_box">
                     <b class="small_title">Номер телефону</b>
-                    <label class="allow_input-box">
-                        <input type="checkbox">
-                        <span>Показувати номер телефону</span>
-                    </label>
-                    <input type="tel" class="allow_input" disabled>
+                    <div class="form_row">
+                        <label class="allow_input-box">
+                            <input type="checkbox">
+                            <span></span>
+                        </label>
+                        <div class="form_row-inner">
+                            <input type="tel" class="allow_input" disabled>
+                        </div>
+                    </div>
                 </div>
                 <div class="text_box">
                     <b class="small_title">Email</b>
-                    <label class="allow_input-box">
-                        <input type="checkbox">
-                        <span>Показувати email</span>
-                    </label>
-                    <input type="email" class="allow_input" disabled>
+                    <div class="form_row">
+                        <label class="allow_input-box">
+                            <input type="checkbox">
+                            <span></span>
+                        </label>
+                        <div class="form_row-inner">
+                            <input type="email" class="allow_input" disabled>
+                        </div>
+                    </div>
                 </div>
                 <div class="text_box">
                     <b class="small_title">Адрес</b>
-                    <label class="allow_input-box">
-                        <input type="checkbox">
-                        <span>Показувати адрес</span>
-                    </label>
-                    <input type="text" class="allow_input" disabled>
+                    <div class="form_row">
+                        <label class="allow_input-box">
+                            <input type="checkbox">
+                            <span></span>
+                        </label>
+                        <div class="form_row-inner">
+                            <input type="text" class="allow_input" disabled>
+                        </div>
+                    </div>
                 </div>
                 <div class="text_box">
                     <b class="small_title">Додатковий коментар</b>
-                    <label class="allow_input-box">
-                        <input type="checkbox">
-                        <span>Показувати додатковий коментар</span>
-                    </label>
-                    <input type="text" class="allow_input" disabled>
+                    <div class="form_row">
+                        <label class="allow_input-box">
+                            <input type="checkbox">
+                            <span></span>
+                        </label>
+                        <div class="form_row-inner">
+                            <input type="text" class="allow_input" disabled>
+                        </div>
+                    </div>
                 </div>
                 <div class="text_box">
                     <b class="small_title">Текст на кнопці</b>
@@ -118,25 +138,29 @@
             <div class="edit_form">
                 <div class="text_box">
                     <b class="small_title">Бонуси</b>
-                    <label class="allow_input-box">
-                        <input type="checkbox">
-                        <span>Додати бонуси</span>
-                    </label>
-                    <div class="add_bonus">
-                        <textarea placeholder="Текст"></textarea>
-                        <input type="text" placeholder="Посилання">
-                        <div class="select_picture">
-                            <div class="select_place"><svg class="icon"><use xlink:href="./images/sprite.svg#upload"></use></svg></div>
-                            <!--<img src="./images/start-page-desk.png">-->
-                            <a href="#" class="delete_picture"><svg class="icon"><use xlink:href="./images/sprite.svg#trash"></use></svg></a>
+                    <div class="form_row">
+                        <label class="allow_input-box">
+                            <input type="checkbox">
+                            <span></span>
+                        </label>
+                        <div class="form_row-inner">
+                            <div class="add_bonus">
+                                <textarea placeholder="Текст"></textarea>
+                                <input type="text" placeholder="Посилання">
+                                <div class="select_picture">
+                                    <div class="select_place"><svg class="icon"><use xlink:href="./images/sprite.svg#upload"></use></svg></div>
+                                    <!--<img src="./images/start-page-desk.png">-->
+                                    <a href="#" class="delete_picture"><svg class="icon"><use xlink:href="./images/sprite.svg#trash"></use></svg></a>
+                                </div>
+                                <a href="#" class="btn btn_fill">Додати</a>
+                            </div>
                         </div>
-                        <a href="#" class="btn btn_fill">Додати</a>
                     </div>
                 </div>
             </div>
             <div class="edit_form">
                 <div class="text_box">
-                    <a href="#" class="btn btn_fill">Додати мессенджери</a>
+                    <b class="small_title">Мессенджери</b>
                     <div class="messenger_box">
                         <svg class="icon"><use xlink:href="./images/sprite.svg#facebook"></use></svg>
                         <input type="text" class="allow_input">
@@ -149,30 +173,63 @@
                         <svg class="icon"><use xlink:href="./images/sprite.svg#twitter"></use></svg>
                         <input type="text" class="allow_input">
                     </div>
+                    <a href="#" class="btn btn_fill">Додати мессенджери</a>
                 </div>
             </div>
             <div class="edit_form">
                 <div class="text_box">
                     <b class="small_title">Знижка</b>
-                    <label class="allow_input-box">
-                        <input type="checkbox">
-                        <span>Додати знижку</span>
-                    </label>
-                    <div class="sale_box">
-                        <input type="text" >
-                        <input type="text" class="sale_number">
-                        <span>%</span>
+                    <div class="form_row">
+                        <label class="allow_input-box">
+                            <input type="checkbox">
+                            <span></span>
+                        </label>
+                        <div class="form_row-inner">
+                            <div class="sale_box">
+                                <input type="text" >
+                                <input type="text" class="sale_number">
+                                <span>%</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="edit_form">
                 <div class="text_box">
-                    <b class="small_title">Консультанти</b>
-                    <label class="allow_input-box">
-                        <input type="checkbox">
-                        <span>Показувати коментарі консультанта</span>
-                    </label>
-
+                    <b class="small_title">Консультант</b>
+                    <div class="form_row">
+                        <label class="allow_input-box">
+                            <input type="checkbox">
+                            <span></span>
+                        </label>
+                        <div class="form_row-inner">
+                            <span class="sub_item-text">Додати фото консультанта</span>
+                            <div class="select_picture add_consultant-photo">
+                                <div class="select_place"><svg class="icon"><use xlink:href="./images/sprite.svg#upload"></use></svg></div>
+                                <!--<img src="./images/start-page-desk.png">-->
+                                <a href="#" class="delete_picture"><svg class="icon"><use xlink:href="./images/sprite.svg#trash"></use></svg></a>
+                            </div>
+                            <span class="sub_item-text">Імя</span>
+                            <input type="text">
+                            <span class="sub_item-text">Текст під імям</span>
+                            <input type="text">
+                            <hr>
+                            <ul class="consultant_list">
+                                <li>
+                                    <span class="sub_item-text">Коментар консультанта 1</span>
+                                    <input type="text">
+                                </li>
+                                <li>
+                                    <span class="sub_item-text">Коментар консультанта 2</span>
+                                    <input type="text">
+                                </li>
+                                <li>
+                                    <span class="sub_item-text">Коментар консультанта 3</span>
+                                    <input type="text">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
