--- a/src/edit-quiz.html
+++ b/src/edit-quiz.html
@@ -49,7 +49,7 @@
                 <li><a href="#" class="active"><b>1</b><span>Стартова сторінка і опис</span></a></li>
                 <li><a href="./question.html"><b>2</b><span>Запитання</span></a></li>
                 <li><a href="#"><b>3</b><span>Форма контактів</span></a></li>
-                <li><a href="#"><b>4</b><span>Редагувати</span></a></li>
+                <li><a href="#"><b>4</b><span>Результати</span></a></li>
                 <li><a href="#"><b>5</b><span>Встановлення квізу</span></a></li>
                 <li><a href="#"><b>6</b><span>Запуск реклами</span></a></li>
             </ul>
